# PRMCP

./: .env.example  .gitignore  README.md  prmcp.toml.example  pyproject.toml
docs/legacy/: CLAUDE.md  Context.md  HANDOFF.md  HARDENED.md  PLAN.md  PRMCP.md  README.md  Start.md  arch.html
docs/legacy/demo/: add-bad.sh  add-diagnose.sh  reset-demo.sh  snippet-diagnose.txt  snippet-experimental.txt
prmcp/: ci_watcher.py  cli.py  config.py  daemon.py  diff_sdk.py  live_tail.py  open_pr.py  run.py  shadow_agent.py  synth_tool.py  ui.py
prmcp/templates/: tool_delete.py.j2  tool_list.py.j2  tool_passthrough.py.j2
